# BCPL8

./: AST.cpp  AST.h  ASTVisitor.h  AST_Cloner.cpp  AssemblyWriter.cpp  AssemblyWriter.h  BasicBlock.h  BitPatcher.cpp  CFGBuilderPass.cpp  CFGBuilderPass.h  CallFrameManager.cpp  CallFrameManager.h  CommonSubexpressionEliminationPass.cpp  CommonSubexpressionEliminationPass.h  ConstantFoldingPass.cpp  ConstantFoldingPass.h  ControlFlowGraph.cpp  ControlFlowGraph.h  DataGenerator.cpp  DataGenerator.h  DataTypes.h  DebugPrinter.cpp  DebugPrinter.h  Encoder.cpp  Encoder.h  InstructionComparator.cpp  InstructionDecoder.cpp  InstructionStream.cpp  InstructionStream.h  JITExecutor.cpp  JITMemoryManager.cpp  JITMemoryManager.h  LabelManager.cpp  LabelManager.h  Lexer.cpp  Lexer.h  Linker.cpp  Linker.h  LiveIntervalPass.cpp  LiveIntervalPass.h  (+78 more)
HeapManager/: HeapManager.cpp  HeapManager.h  Heap_allocString.cpp  Heap_allocVec.cpp  Heap_dumpHeap.cpp  Heap_dumpHeapSignalSafe.cpp  Heap_free.cpp  Heap_printMetrics.cpp  Heap_resizeString.cpp  Heap_resizeVec.cpp  heap_manager_defs.h  heap_manager_globals.cpp
analysis/: ASTAnalyzer.h  LiveInterval.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  TemporaryVariableFactory.cpp
encoders/: Encoder_canEncodeAsImmediate.cpp  create_add_reg.cpp  create_and_reg.cpp  create_cmp_imm.cpp  create_cmp_reg.cpp  create_lsl_imm.cpp  create_lsl_reg.cpp  create_lsr_reg.cpp  create_mov_reg.cpp  create_movk_imm.cpp  create_movz_imm.cpp  create_mul_reg.cpp  create_orr_reg.cpp  create_sdiv_reg.cpp  create_sub_imm.cpp  create_sub_reg.cpp  enc_create_add_imm.cpp  enc_create_add_literal.cpp  enc_create_add_vector_reg.cpp  enc_create_cset.cpp  enc_create_csetm.cpp  enc_create_directive.cpp  enc_create_fcvtzs_reg.cpp  enc_create_fmov_reg.cpp  enc_create_fneg_reg.cpp  enc_create_fsqrt_reg.cpp  enc_create_fsub_reg.cpp  (+31 more)
runtime/: CMakeLists.txt  ListDataTypes.h  README.md  RuntimeBridge.cpp  heap_c_bridge.cpp  heap_interface.c  heap_interface.cpp  heap_interface.h  heap_manager.c  runtime.c  runtime.h  runtime_bridge.cpp  runtime_core.inc  runtime_io.inc  runtime_string_ops.cpp  runtime_string_utils.inc  starter.c
(+124 files in other folders)
